--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -39,6 +39,26 @@
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
+                      <li class="filter list-group-item">
+                        <label for="date">City</label>
+                        <select name="city" id="city">
+                        </select>
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">State</label>
+                        <select name="state" id="state">
+                        </select>
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Country</label>
+                        <select name="country" id="country">
+                        </select>
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Shape</label>
+                        <select name="shape" id="shape">
+                        </select>
+                      </li>
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
