--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -58,6 +58,7 @@
                         <label for="date">City</label>
                         <select name="city" id="city">
                           <option value="">--Select city--</option>
+                          <option value="all">All</option>
                         </select>
                       </li>
 
