--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -69,8 +69,8 @@
                       
 
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <label for="date">Enter a Date(mm/dd/yyyy)</label>
+                        <input class="form-control" id="datetime" type="text">
                       </li>
                     </ul>
                   </div>
