--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -53,7 +53,7 @@
                       
                       <li class="filter list-group-item">
                         <label for="date">City</label>
-                        <select name="city" id="city" onchange="myShape()">
+                        <select name="city" id="city">
                           <option value="">--Select city--</option>
                           
                         </select>
