--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -69,12 +69,12 @@
                       
 
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date(mm/dd/yyyy)</label>
+                        <label for="date">Enter Date(mm/dd/yyyy)</label>
                         <input class="form-control" id="datetime" type="text">
                       </li>
                     </ul>
                   </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="button" class="btn btn-default">Search</button>
                 </form>
               </div>
             </div>
